# AI-

./: .gitignore
3team/app2/: app1.py  app2.py  main.py  pokemon.py  settings.py
3team/app2/output/: 1_원본데이터.json  지식그래프_최종.json
practice51_0331/: README.md  compose.yml
practice51_0331/app/: app2.py  main.py  node.py  pyproject.toml  settings.py
practice52_0401/HarryPotter/: 1.cleaning.py  2.tokenize.py  3.lemmatization.py  4.stopword.py  README.md  main.py  pyproject.toml
practice52_0401/HarryPotter/first_cleaned/: Book1_cleaned.txt  Book2_cleaned.txt  Book3_cleaned.txt  Book4_cleaned.txt  Book5_cleaned.txt  Book6_cleaned.txt  Book7_cleaned.txt
practice52_0401/HarryPotter/sent_token_cleaned/: Book1_cleaned.txt  Book2_cleaned.txt  Book3_cleaned.txt  Book4_cleaned.txt  Book5_cleaned.txt  Book6_cleaned.txt  Book7_cleaned.txt
practice52_0401/HarryPotter/word_token_cleaned/: Book1_cleaned.txt  Book2_cleaned.txt  Book3_cleaned.txt  Book4_cleaned.txt  Book5_cleaned.txt  Book6_cleaned.txt  (+1 more)
study50/: .gitignore  0330.md  README.md
study50/app/: .env  app1.py  app2.py  json파일 에피소드별 만들기.md  main.py  pyproject.toml  위키백과 수집관련 raw.md
study51/: README.md
study51/app/: 1.tokenization.py  5.integerEncoding.py  8.splittingData.py  main.py
study52/app/: main.py  pyproject.toml
study53/: README.md
study53/app/: README.md  app1.py  app2.py  app3.py  app4.py  app5.py  app6.py  app7.py  main.py  pyproject.toml
study54/app/: .gitignore  main.py  pyproject.toml  pyproject1.toml  settings.py
study54/app/src/: step1.py  step2.py  step3.py  step4.py  step5.py
(+2 files in other folders)
