[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "pydantic-settings>=2.13.1",
    "tiktoken>=0.12.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=5.4.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu124"
